--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,16 @@
-// src/components/Header/Header.scss
-
 .header-container {
   flex-grow: 1;
+  
+  a {
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    align-items: center;
+    
+    &:hover {
+      color: #555;
+    }
+  }
 }
 
 .app-bar {
@@ -11,11 +20,15 @@
 .toolbar {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  padding: 0 16px;
 }
 
 .logo-container {
   display: flex;
   align-items: center;
+  flex-basis: 30%;
+  margin-right: 16px;
 }
 
 .logo-image {
@@ -24,17 +37,42 @@
 }
 
 .logo-text {
+  color: inherit;
   font-size: 1.25rem;
 }
 
-.link {
-  text-decoration: none;
-  color: inherit;
+.links-container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 16px;
+  flex-basis: 40%;
+  margin: 0 16px;
 }
 
-.buttons-container {
+.auth-container {
   display: flex;
   align-items: center;
+  flex-basis: 30%;
+  justify-content: flex-end;
+  
+  a {
+    margin-left: 16px;
+    text-decoration: none;
+    color: inherit;
+    
+    &:hover {
+      color: #555;
+    }
+  }
+}
+
+.menu-link {
+  width: 100%;
+  color: inherit !important;
+  justify-content: flex-start;
+  
+  &:hover {
+    color: #555 !important;
+  }
 }
