--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -44,17 +44,17 @@
 .links-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 16px;
-  flex-basis: 40%;
+  flex: 1;
   margin: 0 16px;
 }
 
 .auth-container {
   display: flex;
   align-items: center;
-  flex-basis: 30%;
   justify-content: flex-end;
+  border-left: 1px solid #555;
   
   a {
     margin-left: 16px;
